Update website title and author information

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>A Very Simple Page</title>
+<title>A Very Simple Page</title>   ## name of website
 </head>
-<body>
-<h1>Welcome to XXX Website</h1>
-<img src="/images/Profile.jpeg" width="240" height="300" alt="my photo" />
+<body>    ##what inside of the code
+<h1>Welcome to nicole's Website</h1>
+<img src="/images/Profile.jpeg" width="240" height="300" alt="my photo" />    ##imgae
 <hr>
 <h2>About Me</h2>
 <p>I am a very imaginative person. <br>
@@ -23,6 +23,6 @@ I dream day and night. Wanna to talk to me, got to wake me up</p>
 </ol>
 <p>I am learning how to make a website using html tags and javascript.</p>
 <p>I create a game at <a href="guessImages.html">Guess the image</a> </p>
-<p>xxx copyright &copy;</p>
+<p>nicole copyright &copy;</p>
 </body>
 </html>
